--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@capacitor/android": "^2.2.0",
     "@capacitor/core": "2.2.0",
     "@ionic-native/core": "^5.27.0",
+    "@ionic-native/media-capture": "^5.27.0",
     "@ionic-native/screen-orientation": "^5.27.0",
     "@ionic/core": "^5.2.2",
     "@ionic/react": "^5.2.2",
@@ -15,6 +16,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "android": "^0.0.8",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-media-capture": "^3.0.3",
     "cordova-plugin-screen-orientation": "^3.0.2",
     "es6-promise-plugin": "^4.2.2",
     "react": "^16.13.1",
