--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@capacitor/android": "^2.2.0",
     "@capacitor/core": "2.2.0",
     "@ionic-native/core": "^5.27.0",
+    "@ionic-native/file": "^5.27.0",
     "@ionic-native/media": "^5.27.0",
     "@ionic-native/screen-orientation": "^5.27.0",
     "@ionic/core": "^5.2.2",
